// Copyright 2025 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.
syntax = "proto3";

package recipe_modules.recipe_engine.random;

message InputProperties {
  optional int64 seed = 1;
}
